UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_FieldLevelDiscounting__mdt/ftr_FieldLevelDiscounting__mdt.object-meta.xml
<CustomObject>
    <description>Config Item for Field Level Discounting.</description>
    <label>ftr FieldLevelDiscounting</label>
    <pluralLabel>ftr FieldLevelDiscountings</pluralLabel>
</CustomObject>