UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_FieldLevelDiscounting__mdt/fields/Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Needed__c</fullName>
    <label>Approval_Needed</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>