UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_FieldLevelDiscounting__mdt/fields/Discount_Max__c.field-meta.xml
<CustomField>
    <fullName>Discount_Max__c</fullName>
    <label>Discount Max</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>