UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_FieldLevelDiscounting__mdt/fields/Discount_Min__c.field-meta.xml
<CustomField>
    <fullName>Discount_Min__c</fullName>
    <label>Discount Min</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>