UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_FieldLevelDiscounting__mdt/fields/FiberTier__c.field-meta.xml
<CustomField>
    <fullName>FiberTier__c</fullName>
    <label>FiberTier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>