UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_FieldLevelDiscounting__mdt/fields/Pricing_Group__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Group__c</fullName>
    <label>Pricing Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>