UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_FieldLevelDiscounting__mdt/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <inlineHelpText>Product Code</inlineHelpText>
    <label>ProductCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>