UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_FieldLevelDiscounting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRC</fullName>
                <default>true</default>
                <label>MRC</label>
            </value>
            <value>
                <fullName>NRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>