UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_FieldLevelDiscounting__mdt/listViews/FLA_discount.listView-meta.xml
<ListView>
    <fullName>FLA_discount</fullName>
    <columns>MasterLabel</columns>
    <columns>Approval_Needed__c</columns>
    <columns>Discount_Max__c</columns>
    <columns>Discount_Min__c</columns>
    <columns>FiberTier__c</columns>
    <columns>Pricing_Group__c</columns>
    <columns>Priority__c</columns>
    <columns>ProductCode__c</columns>
    <columns>Speed__c</columns>
    <columns>Term__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>FLA discount</label>
</ListView>